--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ pandas = "^2.2.2"
 scipy = "^1.14.0"
 matplotlib = "^3.9.0"
 
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 79
 
 [build-system]
 requires = ["poetry-core"]
