resolve merge conflicts

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-LOCAL_WORKING_DIR=C:\Users\shayl\Documents\edac\edac_repo
-DATA_DIR=C:\Users\shayl\Documents\edac\edacdata
+LOCAL_WORKING_DIR=C:\Users\sbviet\OneDrive - Universitetet i Oslo\Documents\PhD\Projects\MEX EDAC\edac_work
+DATA_DIR = C:\Users\sbviet\OneDrive - Universitetet i Oslo\Documents\PhD\Projects\MEX EDAC\edac_data
